[package]
name = "the-matron"
version = "0.1.0"
authors = ["mzyzc <mzyzc@czyz.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matrix-sdk = { version = "0.4.1", features= ["encryption"] }
tokio = { version = "1.15.0", features = ["full"] }
